objects/Student_Reporting_Period__c.object
<CustomObject>
    <fields>
        <fullName>Attachment_ID__c</fullName>
        <description>ID of the attached Report card</description>
        <label>Attachment ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Link__c</fullName>
        <description>Link to attachment record for report card/progress reports.</description>
        <label>Student Document Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Create_Report_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For synchronous batch</description>
        <label>Create Report Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPA__c</fullName>
        <label>GPA</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latest_Progress_Report__c</fullName>
        <label>Latest Progress Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Marked_For_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the object marked for creation</description>
        <label>Marked For Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Document_Created__c</fullName>
        <description>used for the batch document creation process</description>
        <label>Most Recent Document Created</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reading_Level__c</fullName>
        <inlineHelpText>Displays on report cards and progress reports. You can enter a value up to 15 characters long.</inlineHelpText>
        <label>Reading Level</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Card_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>boolean reflecting if a report card is both current and created for a student for the related reporting period</description>
        <label>Report Card Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Period_Name__c</fullName>
        <label>Reporting Period Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_In_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show In Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Student Reporting Periods</relationshipLabel>
        <relationshipName>Student_Reporting_Periods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time</label>
        <referenceTo>Time_Element__c</referenceTo>
        <relationshipLabel>Student Reporting Periods</relationshipLabel>
        <relationshipName>Student_Reporting_Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Student Reporting Period</label>
    <listViews>
        <fullName>All_Contacts</fullName>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>Marked_For_Creation__c</columns>
        <columns>Show_In_Portal__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <nameField>
        <displayFormat>SRP-{00}</displayFormat>
        <label>Student Reporting Period Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Reporting Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>