objects/Student_Reporting_Period__c/listViews/All_Contacts.listView-meta.xml
<ListView>
    <fullName>All_Contacts</fullName>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Marked_For_Creation__c</columns>
    <columns>Show_In_Portal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>